Send to db correct

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 PORT = 8080
 
-LINK_DB = mongodb+srv://codder:coder1221@ecommerce-cluster.um4wg.mongodb.net/
+LINK_DB = mongodb+srv://codder:coder1221@ecommerce-cluster.um4wg.mongodb.net/ecommerceDB
 
 SECRET = tigreso
 
